--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,19 +14,21 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: my-frontend:latest
-          imagePullPolicy: Never
+          image: azmeerasai/frontend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
 spec:
+  type: NodePort
   selector:
     app: frontend
   ports:
     - port: 3000
       targetPort: 80
-  type: NodePort
+      nodePort: 31033
