--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: backend
-          image: my-backend:latest
-          imagePullPolicy: Never
+          image: azmeerasai/backend:latest   # Jenkins will update this tag automatically
+          imagePullPolicy: Always
           ports:
             - containerPort: 5000
           env:
@@ -23,7 +23,6 @@ spec:
               value: "mongodb://mongodb:27017/ecommerce"
             - name: JWT_SECRET
               value: "yourSuperSecretKey"
-
 ---
 apiVersion: v1
 kind: Service
@@ -34,7 +33,6 @@ spec:
   selector:
     app: backend
   ports:
-    - port: 5000          # service port (inside cluster)
-      targetPort: 5000    # pod port
-      nodePort: 31034     # port exposed on your machine
-
+    - port: 5000
+      targetPort: 5000
+      nodePort: 31034
